<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_support" translatable="false">Написать в поддержку</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>

    <string name="shared_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="shared_title" translatable="false">Курс по Android-разработке от Яндекс Практикума</string>

    <string name="mail_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email" translatable="false">vabramochkina@yandex.ru</string>

    <string name="agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="separator_dot">·</string>

    <string name="refresh">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="zero_time">00:00</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_created">"Плейлист %s создан"</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="create_fragment_close_title">Завершить создание плейлиста?</string>
    <string name="create_fragment_close_mess">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="sure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_track_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>
</resources>