<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SettingsButton"
        android:layout_marginTop="24dp"
        android:paddingEnd="5dp"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size" />
    <Button
        android:id="@+id/share_button"
        style="@style/SettingsButton"
        android:paddingEnd="@dimen/dimen_16dp"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_share"/>
    <Button
        android:id="@+id/support_button"
        style="@style/SettingsButton"
        android:paddingEnd="14dp"
        android:text="@string/write_support"
        app:drawableEndCompat="@drawable/ic_support" />
    <Button
        android:id="@+id/agreement_button"
        style="@style/SettingsButton"
        android:paddingEnd="20dp"
        android:text="@string/agreement"
        app:drawableEndCompat="@drawable/ic_arrow" />
</LinearLayout>