<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingStart="17dp"
    android:paddingTop="14dp"
    android:paddingEnd="15dp"
    android:paddingBottom="28dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/menu_text_size" />
    <Button
        style="@style/MenuButton"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/ic_search">
    </Button>
    <Button
        style="@style/MenuButton"
        android:id="@+id/media"
        android:text="@string/media_library"
        app:icon="@drawable/ic_medialib">
    </Button>
    <Button
        style="@style/MenuButton"
        android:id="@+id/settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings">
    </Button>
</LinearLayout>