<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/menu_text_size" />
    </LinearLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_vertical"
        android:paddingLeft="@dimen/settings_padding_start"
        android:paddingRight="5dp"
        android:text="@string/dark_theme"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/text_size" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_padding_start">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/settings_vertical"
            android:text="@string/share"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="21dp"
            android:src="@drawable/ic_share" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_padding_start">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/settings_vertical"
            android:text="@string/write_support"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="22dp"
            android:src="@drawable/ic_support" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_padding_start">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/settings_vertical"
            android:text="@string/agreement"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="23dp"
            android:src="@drawable/ic_arrow" />
    </FrameLayout>

</LinearLayout>