<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/search" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/rounded_shape"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/dimen_8dp"
            android:drawableTint="?attr/colorOnSecondary"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_12dp"
            android:paddingEnd="35dp"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="?attr/colorOnSecondary" />
        <ImageView
            android:id="@+id/clear_text_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_cross"
            android:visibility="gone"
            app:tint="?attr/colorOnSecondary" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/search_history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:text="@string/searched"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_20" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/track_history_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/view_track_list_item" />

                <Button
                    android:id="@+id/clear_history_button"
                    style="@style/SmallButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginBottom="@dimen/dimen_24dp"
                    android:text="@string/clear_history" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/view_track_list_item" />

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="@dimen/error_image_size"
            android:layout_height="@dimen/error_image_size"
            android:layout_gravity="center"
            tools:srcCompat="@drawable/ic_network_error" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_20"
            tools:text="Текст ошибки" />

        <Button
            android:id="@+id/refresh_button"
            style="@style/SmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/refresh"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>